Off centre list item fixed
Padding 0 added to .list-group

--- a/css/media-object.css
+++ b/css/media-object.css
@@ -25,7 +25,10 @@
 	overflow: hidden; 
 }
 
-
+.list-group {
+	list-style-type: none;
+	padding:0;
+}
 
 .list-group-item:before {
 	content: "";
